remove unused code & minor fixes